--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start:prod": "node dist/server.js"
   },
   "author": "",
   "license": "ISC",
